--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,35 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
+  	<div class="logo">
+  		<img src="images/nadia-logo.png" alt="Nadia Connor">
+  	</div>
 	<div class="container">
 		<header class="row">
-			<h1 class="col-sm-2 pull-left"><a href="#">Nadia Connor</a></h1>
-			<nav>
-				<div class="col-sm-1 pull-right"><a href="#">About</a></div>
-				<div class="col-sm-2 pull-right"><a href="#">Contact</a></div>
-			</nav>
+			<div class="container">
+				<h1 class="col-sm-4 pull-left"><a href="#">Nadia Connor</a></h1>
+				<nav>
+					<div class="col-sm-1 pull-right"><a href="#">About</a></div>
+					<div class="col-sm-2 pull-right"><a href="#">Contact</a></div>
+				</nav>
+			</div>
 		</div>
-		<div class="container">
+		<div class="container articles">
+			<article class="row">
+				<div class="col-sm-2">
+					<div class="spacer"></div>
+				</div>
+				<div class="col-sm-6">
+					<h1>The Amazing Title of the piece, for example rape &amp; Twitter</h1>
+					<p>
+						It is <a href="#">MACHINE OF GOD</a> long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
+					</p>
+					<p>
+						Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+					</p>
+				</div>
+
+			</article>
 			<article class="row">
 				<div class="col-sm-2">
 					<div class="spacer"></div>
@@ -33,7 +53,24 @@
 					<div class="spacer"></div>
 				</div>
 				<div class="col-sm-6">
-					<h1>The Amazing Title of the piece, for example rape &amp; Twitter</h1>
+					<h1>An amazing picture of some beef cuts for everyone</h1>
+					<img src="images/cow.jpg" alt="cow cuts">
+					<p>
+						It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
+					</p>
+					<p>
+						Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+					</p>
+				</div>
+
+			</article>
+			<article class="row">
+				<div class="col-sm-2">
+					<div class="spacer"></div>
+				</div>
+				<div class="col-sm-6">
+					<h1>An amazing picture of some beef cuts for everyone</h1>
+					<img src="images/badger.jpg" alt="cow cuts">
 					<p>
 						It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
 					</p>
